solve Kata10 and fix Kata10Test